# signi_email_auth_otp

./: .flake8  LICENCE  Makefile  README.md  pyproject.toml  pytest.ini
integration_tests/: Dockerfile  app.py  docker-compose.yml  requirements.txt  test_integration.py
src/signi_email_otp/: auth.py  config.py  core.py  db.py  email_service.py  exception.py  jwt_utils.py  models.py
tests/: test_auth.py  test_config.py  test_jwt.py  test_models.py
