[project]
name = "signi_email_auth_otp"
version = "0.1.0"
description = "Email OTP and JWT tracking service"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.8"

dependencies = [
    "SQLAlchemy==2.0.30",
    "PyJWT==2.8.0",
    "psycopg2-binary==2.9.9"
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "flake8==7.0.0",
    "pytest==8.2.1",
    "mypy==1.10.0",
    "pytest-cov==5.0.0"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,build,dist"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"